# reliable-transfer-protocols

./: README.md
alternating_client/: CMakeLists.txt  main.cpp
alternating_server/: CMakeLists.txt  main.cpp
selective_client/: CMakeLists.txt  SelectiveClient.cpp  SelectiveClient.h  main.cpp
selective_server/: CMakeLists.txt  SelectiveServer.cpp  SelectiveServer.h  SentPacket.cpp  SentPacket.h  main.cpp
stopwait_client/: CMakeLists.txt  StopWaitClient.cpp  StopWaitClient.h  main.cpp
stopwait_server/: CMakeLists.txt  StopWaitServer.cpp  StopWaitServer.h  main.cpp
utils/: socket_utils.cpp  socket_utils.h
